--- a/ContactPro/Views/Shared/_Layout.cshtml
+++ b/ContactPro/Views/Shared/_Layout.cshtml
@@ -52,44 +52,35 @@
             </div>
         </nav>
         <!--END NEW NAVBAR-->
-
-        <!--OLD NAVBAR-->
-        @*<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ContactPro</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Contacts" asp-action="Index">Contacts</a>
-                        </li>
-                    </ul>
-                    <partial name="_LoginPartial" />
-                </div>
-            </div>
-        </nav>*@
     </header>
 
-    <div class="container">
-        <main role="main" class="pb-3">
+    <main class="content" id="mainHero">
+        <section class="container-fluid h-100">
             @RenderBody()
-        </main>
-    </div>
+        </section>
+    </main>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - ContactPro - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer class="footer container-fluid">
+        <div class="row align-items-center py-2">
+            <div class="col">
+                <div class="row align-items-center gy-2">
+                    <div class="col d-flex justify-content-center justify-content-md-start order-last order-md-first copyright">
+                        &copy; 2022 Caleb Jones All Rights Reserved
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <img src="/img/ContactPro.png" height="50">
+                    </div>
+                    <div class="col-12 col-md d-flex justify-content-center justify-content-md-end">
+                        <a href="#" class="socialicons"><i class="bi bi-linkedin p-2 "></i></a>
+                        <a href="#" class="socialicons"><i class="bi bi-facebook p-2"></i></a>
+                        <a href="#" class="socialicons"><i class="bi bi-github p-2"></i></a>
+
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
