--- a/ContactPro/Views/Home/Index.cshtml
+++ b/ContactPro/Views/Home/Index.cshtml
@@ -7,11 +7,11 @@
     <div class="col-12 col-md-6 col-lg-5 order-last order-md-first">
         <div class="ms-5">
             <h1 class="heroTitle">
-                All your <span class="texthighlight">contacts</span> in
+                <span class="texthighlight">Connect</span> with all your contacts in
                 one place
             </h1>
             <div class="subtitle">
-                Organize your events by keeping everyone in the loop. Experience the power of ContactPro
+                Organize your events by keeping everyone in the loop. Experience the power of ConnectPro
                 today!<br><br><strong>Built with pride using cutting edge tech:</strong>
                 <br><i class="devicon-dot-net-plain-wordmark colored icon"></i>
                 <i class="devicon-csharp-plain-wordmark colored icon"></i>
