--- a/ContactPro/Views/Shared/_Layout.cshtml
+++ b/ContactPro/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
         <!--NEW NAVBAR-->
         <nav class="navbar navbar-expand-md navbar-light fixed-top border-bottom border-light navShadow">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="/img/ContactPro.png" height=45></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="/img/ConnectProNav.png" height=45></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -75,7 +75,7 @@
                         &copy; 2022 Caleb Jones All Rights Reserved
                     </div>
                     <div class="col d-flex justify-content-center">
-                        <img src="/img/ContactPro.png" height="50">
+                        <img src="/img/ConnectProFooter.png" height="50">
                     </div>
                     <div class="col-12 col-md d-flex justify-content-center justify-content-md-end">
                         <a href="https://www.linkedin.com/in/caleb-d-jones/" class="socialicons"><i class="bi bi-linkedin p-2"></i></a>
