--- a/ContactPro/wwwroot/css/site.css
+++ b/ContactPro/wwwroot/css/site.css
@@ -1,5 +1,6 @@
 :root {
-    --cf-primaryColor: #0869b8;
+    /*--cf-primaryColor: #0869b8;*/
+    --cf-primaryColor: #9c31ff;
     --cf-primaryColorDark: #002a4e;
     --cf-primaryColorLight: #edf5fc;
     --cf-secondaryColor: #fff0d9;
