--- a/ContactPro/Views/Contacts/Index.cshtml
+++ b/ContactPro/Views/Contacts/Index.cshtml
@@ -43,7 +43,14 @@
                     <div class="card mb-3">
                         <div class="row g-0">
                             <div class="col-md-4 square-img-container">
-                                <img src="@ImageService.ConvertByteArrayToFile(contact.ImageData!, contact.ImageType!)" class="square-img rounded-start" alt="Contact Image">
+                                @if(contact.ImageData == null)
+                                {
+                                    <img src="~/img/DefaultContactImage.png" class="square-img rounded-start" alt="Default Contact Image" />
+                                }
+                                else
+                                {
+                                    <img src="@ImageService.ConvertByteArrayToFile(contact.ImageData!, contact.ImageType!)" class="square-img rounded-start" alt="Contact Image" />
+                                }                             
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
