--- a/ContactPro/Views/Contacts/Index.cshtml
+++ b/ContactPro/Views/Contacts/Index.cshtml
@@ -43,14 +43,14 @@
                     <div class="card mb-3">
                         <div class="row g-0">
                             <div class="col-md-4 square-img-container">
-                                @if(contact.ImageData == null)
+                                @if (contact.ImageData == null)
                                 {
                                     <img src="~/img/DefaultContactImage.png" class="square-img rounded-start" alt="Default Contact Image" />
                                 }
                                 else
                                 {
                                     <img src="@ImageService.ConvertByteArrayToFile(contact.ImageData!, contact.ImageType!)" class="square-img rounded-start" alt="Contact Image" />
-                                }                             
+                                }
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -80,3 +80,26 @@
         </div>
     </div>
 </div>
+
+@section scripts{
+    <!--Sweet Alerts-->
+    <script>
+        let message = '@(ViewBag.SwalMessage)';
+
+        if (!message.includes("Error") && message != '') {
+            Swal.fire({
+                backdrop: false,
+                icon: 'success',
+                title: message,
+                showConfirmButton: true
+            })
+        } else if (message.includes("Error")) {
+            Swal.fire({
+                backdrop: false,
+                icon: 'error',
+                title: 'Oops...',
+                text: message
+            })
+        }
+    </script>
+    }
