Title Element Changes

--- a/ContactPro/Views/Categories/Create.cshtml
+++ b/ContactPro/Views/Categories/Create.cshtml
@@ -1,5 +1,9 @@
 ﻿@model ContactPro.Models.Category
 
+@{
+    ViewData["Title"] = "Create Category";
+}
+
 <h1>CREATE CATEGORY</h1>
 
 <div class="row">
