--- a/ContactPro/Views/Categories/Edit.cshtml
+++ b/ContactPro/Views/Categories/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ContactPro.Models.Category
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Category";
 }
 
 <h1>EDIT CATEGORY</h1>
