--- a/ContactPro/Views/Categories/Delete.cshtml
+++ b/ContactPro/Views/Categories/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ContactPro.Models.Category
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Category";
 }
 
 <h1>Delete Category</h1>
