--- a/ContactPro/Views/Categories/Index.cshtml
+++ b/ContactPro/Views/Categories/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ContactPro.Models.Category>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Categories";
 }
 
 <div class="row mt-5">
