--- a/ContactPro/Views/Contacts/Create.cshtml
+++ b/ContactPro/Views/Contacts/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ContactPro.Models.Contact
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Contact";
 }
 
 <h1>CREATE CONTACT</h1>
