--- a/ContactPro/Views/Contacts/Delete.cshtml
+++ b/ContactPro/Views/Contacts/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ContactPro.Models.Contact
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Contact";
 }
 
 <h1>Delete Contact</h1>
