--- a/ContactPro/Views/Contacts/Edit.cshtml
+++ b/ContactPro/Views/Contacts/Edit.cshtml
@@ -4,7 +4,7 @@
 @inject IImageService ImageService
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Contact";
 }
 
 <h1>Edit Contact</h1>
