--- a/ContactPro/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ContactPro/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,4 +1,7 @@
 ﻿@page
+
+@using AspNetCore.ReCaptcha
+
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
@@ -37,7 +40,10 @@
             </div>
             <div class="mt-2">
                 <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-            </div>           
+            </div>
+            <div>
+                @Html.ReCaptcha()
+            </div>
         </form>
     </div>
 </div>
