--- a/ContactPro/Views/_ViewImports.cshtml
+++ b/ContactPro/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using ContactPro
 @using ContactPro.Models
+@using ConnectPro
+@using ConnectPro.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AspNetCore.ReCaptcha
