Updated Layout - Landing Page
Social links will now open in a new tab

--- a/Views/Shared/_Layout - Landing Page.cshtml
+++ b/Views/Shared/_Layout - Landing Page.cshtml
@@ -78,9 +78,9 @@
                         <img src="/img/ConnectProFooter.png" height="50">
                     </div>
                     <div class="col-12 col-md d-flex justify-content-center justify-content-md-end">
-                        <a href="https://www.linkedin.com/in/caleb-d-jones/" class="socialicons"><i class="bi bi-linkedin p-2"></i></a>
-                        <a href="https://www.facebook.com/caleb.jones.754" class="socialicons"><i class="bi bi-facebook p-2"></i></a>
-                        <a href="https://github.com/calebj516" class="socialicons"><i class="bi bi-github p-2"></i></a>
+                        <a href="https://www.linkedin.com/in/caleb-d-jones/" class="socialicons" target="_blank"><i class="bi bi-linkedin p-2"></i></a>
+                        <a href="https://www.facebook.com/caleb.jones.754" class="socialicons" target="_blank"><i class="bi bi-facebook p-2"></i></a>
+                        <a href="https://github.com/calebj516" class="socialicons" target="_blank"><i class="bi bi-github p-2"></i></a>
 
                     </div>
                 </div>
