--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -41,9 +41,9 @@
             <div class="mt-2">
                 <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
             </div>
-            <div>
+            @*<div>
                 @Html.ReCaptcha()
-            </div>
+            </div>*@
         </form>
     </div>
 </div>
